[gd_scene load_steps=3 format=3 uid="uid://dfcw7kbsewr3g"]

[ext_resource type="Script" path="res://Scripts/oxystation_console.gd" id="1_wx6er"]
[ext_resource type="Texture2D" uid="uid://cv6jb2plnye58" path="res://Assets/Sprites/disorganised_moshpit_of_sprites.png" id="2_bgdyn"]

[node name="oxystation_console" type="Node2D"]
script = ExtResource("1_wx6er")

[node name="filler1" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_bgdyn")
offset = Vector2(0, 0.5)
region_enabled = true
region_rect = Rect2(13, 6, 2, 1)

[node name="filler2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 2)
texture = ExtResource("2_bgdyn")
offset = Vector2(0, 0.5)
region_enabled = true
region_rect = Rect2(13, 6, 2, 1)

[node name="filler3" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 4)
texture = ExtResource("2_bgdyn")
offset = Vector2(0, 0.5)
region_enabled = true
region_rect = Rect2(13, 6, 2, 1)

[node name="filler4" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 6)
texture = ExtResource("2_bgdyn")
offset = Vector2(0, 0.5)
region_enabled = true
region_rect = Rect2(13, 6, 2, 1)

[node name="filler5" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 8)
texture = ExtResource("2_bgdyn")
offset = Vector2(0, 0.5)
region_enabled = true
region_rect = Rect2(13, 6, 2, 1)

[node name="lamp" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-2, 23)
texture = ExtResource("2_bgdyn")
region_enabled = true
region_rect = Rect2(10, 0, 2, 4)

[node name="lamp_red" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-2, 23)
texture = ExtResource("2_bgdyn")
region_enabled = true
region_rect = Rect2(7, 0, 2, 4)
